# AR_course

./: README.md
AR_for_Ubuntu/: 说明.txt
AR_for_Ubuntu/ORB_SLAM2_AR/ORB_SLAM2/: CMakeLists.txt
AR_for_Ubuntu/ORB_SLAM2_AR/Stereo_AR/ORB_AR/: CMakeLists.txt  Extrinsics.xml  StereoCam.yaml
AR_for_Ubuntu/ORB_SLAM2_AR/Stereo_AR/ORB_AR/include/: orb_slam.h  utils.h
AR_for_Ubuntu/ORB_SLAM2_AR/Stereo_AR/ORB_AR/include/GL_Rendering/: controls.hpp  texture.hpp
AR_for_Ubuntu/ORB_SLAM2_AR/Stereo_AR/ORB_AR/include/ORB_SLAM/: System.h
AR_for_Ubuntu/ORB_SLAM2_AR/Stereo_AR/ORB_AR/src/: controls.cpp  main.cpp  orbslam.cpp  planar.cpp
AR_for_Win/FinalPlaneSLAM_ygx/: 说明.txt
AR_for_Win/FinalPlaneSLAM_ygx/FightMan/: Assembly-CSharp.csproj  FightMan.sln  FightMan.userprefs
AR_for_Win/FinalPlaneSLAM_ygx/orbslam_depthar/: orbslam_depthar.sln
AR_for_Win/MarkerLessUnity/: Assembly-CSharp-Editor.csproj  Assembly-CSharp-firstpass.csproj  Assembly-CSharp.csproj  Assembly-UnityScript.unityproj  MarkerLess.sln  MarkerLess.userprefs  MarkerLessUnity.sln
AR_for_Win/MarkerLessUnity/Assets/: markerlessAR.unity
AR_for_Win/MarkerLessUnity/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset  UnityConnectSettings.asset
AR_for_Win/SuperMario64_slamAR/: 说明.txt
AR_for_Win/markerlessAR/: markerlessAR.sln
AR_for_android/: 说明.txt
AR_for_android/AndroidUnity3D/: Assembly-CSharp.csproj  fuck.sln  unity3dios.sln  unity3dios.userprefs
AR_for_android/orbslam2_AR_android/: 说明.txt
AR_for_android/orbslam2安卓直接运行工程不需要unity/: 说明.txt
AR_for_iOS/MarkerLessARYgx/: 说明.txt
unity3d资源/: 说明.txt
unity3d资源/AR_shadow/: ARShadow.mat  ARShadow.shader
(+1151 files in other folders)
